--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^6.26.2",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "@tanstack/react-query": "^5.59.6",
+    "axios": "^1.7.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
